# magic-mirror

./: .gitignore  .gitmodules  .rustfmt.toml  BUILD.md  CHANGELOG.md  Cargo.toml  README.md  auto-release.sh  mmserver.default.toml
.github/actions/install-slang/: action.yaml
.github/workflows/: bump-version.yaml  cliff-bump-version.toml  cliff.toml  docs.yaml  release-mmclient.yaml  release-mmserver.yaml  tests.yaml
LICENSES/: BUSL-1.1.txt
docs/: .gitignore  config.toml
docs/content/: _index.md
docs/content/setup/: client.md  server.md
latency-test/: Cargo.toml
latency-test/src/: main.rs
mm-client/: Cargo.toml  build.rs
mm-client-common/: Cargo.toml
mm-client-common/src/: attachment.rs  codec.rs  conn.rs  display_params.rs  input.rs  lib.rs  logging.rs  packet.rs  pixel_scale.rs  presentation.rs  session.rs  stats.rs  validation.rs
mm-client-common/src/conn/: hostport.rs
mm-client-common/src/packet/: ring.rs
mm-client/src/: audio.rs  conn.rs  cursor.rs  delegate.rs  flash.rs  font.rs  gamepad.rs  keys.rs  lib.rs  overlay.rs  packet_ring.rs  render.rs  render.slang  stats.rs  video.rs  vulkan.rs
mm-client/src/audio/: buffer.rs
mm-client/src/shaders/: frag.glsl  vert.glsl
mm-docgen/: Cargo.toml
mm-protocol/: Cargo.toml  build.rs
mm-protocol/src/: lib.rs  messages.proto  timestamp.rs
mm-server/: Cargo.toml  build.rs  deny.toml
mm-server/src/: codec.rs  color.rs  compositor.rs  config.rs  container.rs  encoder.rs  main.rs  pixel_scale.rs  server.rs  session.rs  state.rs  vulkan.rs  waking_sender.rs
mm-server/src/compositor/: audio.rs  buffers.rs  child.rs  control.rs  dispatch.rs  geometry.rs  handle.rs  handlers.rs  input.rs  oneshot_render.rs  output.rs  protocols.rs  sealed.rs  seat.rs  shm.rs  stack.rs  surface.rs  video.rs  window.rs  xserver.rs  xwayland.rs
mm-server/src/compositor/audio/: pulse.rs
mm-server/src/compositor/buffers/: modifiers.rs
mm-server/src/compositor/child/: container.rs
mm-server/src/compositor/dispatch/: wl_buffer.rs  wl_compositor.rs  wl_data_device_manager.rs  wl_drm.rs  wl_output.rs  wl_seat.rs  wl_shm.rs  wp_fractional_scale.rs  wp_game_controller.rs  wp_linux_dmabuf.rs  wp_linux_drm_syncobj.rs  wp_pointer_constraints.rs  wp_presentation.rs  wp_relative_pointer.rs  wp_text_input.rs  xdg_shell.rs  xwayland_shell.rs
mm-server/src/compositor/handlers/: buffers.rs  color_management.rs  drm.rs  input.rs  x11.rs  xdg_shell.rs
mm-server/src/compositor/input/: udevfs.rs
mm-server/src/compositor/protocol/: mesa-color-management-v1.xml  wayland-drm.xml
mm-server/src/compositor/protocols/: game-controller-v1.xml  shm.rs  wl_buffer.rs  wl_compositor.rs  wl_drm.rs  wl_seat.rs  wl_shm.rs  wp_game_controller.rs  xdg_shell.rs
mm-server/src/compositor/video/: color.slang  composite.rs  composite.slang  convert.rs  convert.slang  cpu_encode.rs  dma.rs  dmabuf.rs  submit_builder.rs  textures.rs  timebase.rs  vulkan_encode.rs
mm-server/src/compositor/video/cpu_encode/: ffmpeg.rs  svt.rs
mm-server/src/compositor/video/shaders/: composite_frag.glsl  composite_vert.glsl  convert.glsl
mm-server/src/compositor/video/vulkan_encode/: dpb.rs  gop_structure.rs  h264.rs  h265.rs  rate_control.rs  stats.rs
mm-server/src/compositor/xwayland/: xwm.rs
mm-server/src/container/: ipc.rs  runtime.rs
mm-server/src/encoder/: dpb.rs  gop_structure.rs  h264.rs  h265.rs  rate_control.rs
mm-server/src/server/: handlers.rs  mdns.rs  sendmmsg.rs  stream.rs
mm-server/src/server/handlers/: attachment.rs  chunk.rs  validation.rs
mm-server/src/server/handlers/attachment/: chunk.rs  stats.rs
mm-server/src/session/: audio.rs  compositor.rs  control.rs  handle.rs  input.rs  reactor.rs  video.rs
mm-server/src/session/audio/: buffer.rs  pulse.rs
mm-server/src/session/compositor/: buffers.rs  dispatch.rs  oneshot_render.rs  output.rs  sealed.rs  seat.rs  serial.rs  stack.rs  surface.rs  xwayland.rs
mm-server/src/session/compositor/buffers/: modifiers.rs  syncobj_timeline.rs
mm-server/src/session/compositor/dispatch/: wl_buffer.rs  wl_compositor.rs  wl_data_device_manager.rs  wl_drm.rs  wl_output.rs  wl_seat.rs  wl_shm.rs  wp_fractional_scale.rs  wp_linux_dmabuf.rs  wp_linux_drm_syncobj.rs  wp_pointer_constraints.rs  wp_presentation.rs  wp_relative_pointer.rs  wp_text_input.rs  xdg_shell.rs  xwayland_shell.rs
mm-server/src/session/compositor/protocols/: wl_drm.rs
mm-server/src/session/compositor/xwayland/: xwm.rs
mm-server/src/session/input/: udevfs.rs
mm-server/src/session/video/: composite.rs
mm-server/src/vulkan/: chain.rs  drm.rs  timeline.rs  video.rs
shader-common/: color.slang
test-apps/: Cargo.toml  build.rs
test-apps/src/: color-test.slang
test-apps/src/shaders/: frag.glsl  vert.glsl
