# Copyright 2024 Colin Marc <hi@colinmarc.com>
#
# SPDX-License-Identifier: MIT

[workspace]
resolver = "2"
members = ["mm-server", "mm-protocol", "mm-client", "latency-test"]

[patch.crates-io]
mio-timerfd = { git = "https://github.com/colinmarc/mio-timerfd.git" }
imgui = { git = "https://github.com/colinmarc/imgui-rs" }
imgui-winit-support = { git = "https://github.com/colinmarc/imgui-rs" }
