# Copyright 2024 Colin Marc <hi@colinmarc.com>
#
# SPDX-License-Identifier: MIT

[package]
name = "mm-client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mmclient"
path = "src/bin/mmclient.rs"

[[bin]]
name = "latency-test"
path = "src/bin/latency-test.rs"

[dependencies]
anyhow = "1.0.75"
ash = "0.37.3"
ash-window = "0.12.0"
bytes = "1.5.0"
cstr = "0.2.11"
ffmpeg-next = "6.0"
ffmpeg-sys-next = "6.0"
quiche = { version = "0.18.0", features = ["qlog"] }
ring = "0.16.20"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["time", "env-filter"] }
mm-protocol = { path = "../mm-protocol" }
clap = { version = "4.4.5", features = ["derive"] }
humantime = "2.1.0"
tabwriter = "1.3.0"
mio = { version = "0.8", features = ["net", "os-ext", "os-poll"] }
crossbeam-channel = "0.5.8"
raw-window-handle = "0.5.2"
font-kit = "0.11.0"
rand = "0.8.5"
histo = "1.0.0"
cpal = "0.15.2"
opus = "0.3.0"
tracy-client = { version = "0.17", default-features = false }
tracing-tracy = { version = "0.11", default-features = false }
dasp = { version = "0.11.0", features = [
    "slice",
    "signal",
    "interpolate",
    "interpolate-linear",
] }
simple_moving_average = "1.0.2"
lazy_static = "1.4.0"
glam = "0.26.0"
image = { version = "0.25.1", features = ["png"], default-features = false }
ip_rfc = "0.1.0"

[dependencies.winit]
version = "0.29"
git = "https://github.com/rust-windowing/winit"
rev = "575d978202193abc03c1700f9df9d6e1aa6b03a1"
default-features = false
features = ["wayland", "x11", "rwh_05"]

[patch.crates-io.winit]
git = "https://github.com/rust-windowing/winit"
rev = "575d978202193abc03c1700f9df9d6e1aa6b03a1"

[dependencies.imgui]
git = "https://github.com/colinmarc/imgui-rs"
rev = "e2da7720106c23a8f0bb5b2b30fb7a68e18e9450"
features = ["tables-api"]

[patch.crates-io.imgui]
git = "https://github.com/colinmarc/imgui-rs"
rev = "e2da7720106c23a8f0bb5b2b30fb7a68e18e9450"

[patch.crates-io.imgui-sys]
git = "https://github.com/colinmarc/imgui-rs"
rev = "e2da7720106c23a8f0bb5b2b30fb7a68e18e9450"

[dependencies.imgui-winit-support]
git = "https://github.com/colinmarc/imgui-rs"
rev = "e2da7720106c23a8f0bb5b2b30fb7a68e18e9450"

[dependencies.imgui-rs-vulkan-renderer]
version = "1.12"
features = ["dynamic-rendering"]

[target.'cfg(target_os = "macos")'.dependencies]
ash-molten = "0.18"

[build-dependencies.slang]
git = "https://github.com/colinmarc/slang-rs"
rev = "47322afed6bc5e9c9627cae8bdbcbcc336652aa8"
# Uses SLANG_DIR if set, otherwise builds slang from source
features = ["from-source"]

[features]
default = []
tracy = ["tracy-client/enable"]
