# Copyright 2024 Colin Marc <hi@colinmarc.com>
#
# SPDX-License-Identifier: MIT

[package]
name = "mm-client"
version = "0.7.1"
edition = "2021"

[[bin]]
name = "mmclient"
path = "src/bin/mmclient.rs"

[[bin]]
name = "latency-test"
path = "src/bin/latency-test.rs"

[dependencies]
anyhow = "1"
ash = "0.38"
ash-window = "0.13.0"
bytes = "1"
clap = { version = "4", features = ["derive"] }
cpal = "0.15"
crossbeam-channel = "0.5"
cstr = "0.2"
ffmpeg-next = "7"
ffmpeg-sys-next = "7"
font-kit = "0.11"
gilrs = "0.10"
glam = "0.26"
histo = "1"
humantime = "2"
image = { version = "0.25", default-features = false, features = ["png"] }
imgui = { version = "0.12.0", features = ["tables-api"] }
imgui-sys = "0.12.0"
imgui-winit-support = "0.13.0"
imgui-rs-vulkan-renderer = { version = "1.16.0", features = ["dynamic-rendering"] }
lazy_static = "1"
oneshot = { version = "0.1", default-features = false, features = ["std"] }
opus = "0.3"
pollster = "0.3"
rand = "0.8"
raw-window-handle = "0.5"
simple_moving_average = "1"
tabwriter = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["time", "env-filter"] }
tracy-client = { version = "0.17", default-features = false }
tracing-tracy = { version = "0.11", default-features = false }

[dependencies.mm-protocol]
path = "../mm-protocol"

[dependencies.mm-client-common]
path = "../mm-client-common"

[dependencies.dasp]
version = "0.11"
features = ["slice", "signal", "interpolate", "interpolate-linear"]

[dependencies.winit]
version = "0.30"
default-features = false
features = ["wayland", "x11", "rwh_06"]

[target.'cfg(target_os = "macos")'.dependencies]
ash-molten = { version = "0.18", optional = true }

[build-dependencies.slang]
git = "https://github.com/colinmarc/slang-rs"
rev = "075daa4faa8d1ab6d7bfbb5293812b087a527207"
# Uses SLANG_DIR if set, otherwise builds slang from source
features = ["from-source"]

[features]
default = []
moltenvk_static = ["dep:ash-molten"]
tracy = ["tracy-client/enable"]
