# Copyright 2024 Colin Marc <hi@colinmarc.com>
#
# SPDX-License-Identifier: MIT

[package]
name = "mm-protocol"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
octets = "0.2"
prost = "0.13"
prost-types = "0.13"
thiserror = "1"

[build-dependencies]
prost-build = "0.13"
