# Copyright 2024 Colin Marc <hi@colinmarc.com>
#
# SPDX-License-Identifier: MIT

[package]
name = "mm-protocol"
version = "0.2.1"
edition = "2021"
license = "MIT"

[dependencies]
bytes = "1"
octets = "0.2"
prost = "0.13"
thiserror = "1"
uniffi = { version = "0.28", optional = true }

[build-dependencies]
prost-build = "0.13"

[features]
uniffi = ["dep:uniffi"]
