# Copyright 2024 Colin Marc <hi@colinmarc.com>
#
# SPDX-License-Identifier: BUSL-1.1

[package]
name = "mm-server"
version = "0.4.1"
edition = "2021"

[[bin]]
name = "mmserver"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.72"
bytes = "1.4.0"
clone3 = "0.2"
cstr = "0.2.11"
ffmpeg-next = { version = "7", optional = true }
ffmpeg-sys-next = { version = "7", optional = true }
glam = "0.24.1"
lazy_static = "1.4.0"
libc = "0.2"
libloading = "0.8.0"
nix = { version = "0.29", features = ["net", "socket", "uio"] }
mio = { version = "1", features = ["net", "os-ext", "os-poll"] }
mio-timerfd = "0.2.0"
quiche = { version = "0.18", features = ["boringssl-boring-crate"] }
rcgen = "0.12.1"
boring = "3"
rand = "0.8.5"
ring = "0.16.20"
rustix = { version = "0.38", features = ["mm", "mount", "pipe", "time", "stdio"] }
thiserror = "1.0.48"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
mm-protocol = { path = "../mm-protocol" }
octets = "0.2.0"
protobuf = "3.2.0"
listenfd = "1.0.1"
tiny_id = "0.1.6"
oneshot = { version = "0.1.6", default-features = false, features = ["std"] }
threadpool = "1.8.1"
crossbeam-channel = "0.5.8"
scopeguard = "1.2.0"
hashbrown = "0.14.1"
drm-fourcc = "2.2.0"
ctrlc = "3.4.1"
clap = { version = "4", features = ["derive"] }
pathsearch = "0.2.0"
unshare = "0.7.0"
mktemp = "0.5.1"
opus = "0.3"
audiopus_sys = { version = "0.2", features = ["static"] }
byteorder = "1.5.0"
dasp = "0.11.0"
uuid = "1.4"
tracy-client = { version = "0.17", default-features = false }
tracing-tracy = { version = "0.11", default-features = false }
simple_moving_average = { version = "1.0.2", optional = true }
paste = "1.0.14"
serde = "1.0.197"
toml = "0.8.10"
ip_rfc = "0.1.0"
regex = "1.10.3"
converge = "0.0.5"
serde_json = "1.0.114"
cursor-icon = "1.1.0"
image = { version = "0.25.1", default-features = false, features = ["png"] }
git-version = "0.3.9"
wayland-scanner = "0.31.1"
wayland-server = { version = "0.31.2", features = ["log"] }
wayland-protocols = { version = "0.32.1", features = ["server", "staging", "unstable"] }
slotmap = "1.0.7"
x11rb = { version = "0.13", features = ["composite"] }

[dependencies.ash]
git = "https://github.com/ash-rs/ash"
rev = "92084df65f52aa15b704279fb6d8d26a3ee71809"

[dependencies.pulseaudio]
git = "https://github.com/colinmarc/pulseaudio-rs"
rev = "70ddb748f20ceecc20e963e571188124aeb30186"

[dependencies.svt]
git = "https://github.com/colinmarc/svt-rs"
rev = "747915fa4b2f7d0bd2c70ef5af108c75031efc53"
optional = true
features = ["av1", "hevc"]


[build-dependencies]
system-deps = "6"
xkbcommon = { version = "0.7.0", default-features = false }

[build-dependencies.slang]
git = "https://github.com/colinmarc/slang-rs"
rev = "78f7be2eb9a694747c6878d476984f576e21edf4"
# Uses SLANG_DIR if set, otherwise builds slang from source
features = ["from-source"]

[package.metadata.system-deps]
libavcodec = { version = "6", feature = "ffmpeg_encode" }

[features]
default = ["svt_encode", "vulkan_encode"]
svt_encode = ["dep:svt"]
vulkan_encode = []
ffmpeg_encode = ["dep:ffmpeg-next", "dep:ffmpeg-sys-next"]
tracy = [
    "dep:simple_moving_average",
    "tracy-client/enable",
    "tracy-client/broadcast",
    "tracing-tracy/enable",
]

[dev-dependencies]
pretty_assertions = "*"
test-log = { version = "*", features = ["trace"] }

[patch.crates-io]
mio-timerfd = { git = "https://github.com/colinmarc/mio-timerfd.git" }
