# Copyright 2024 Colin Marc <hi@colinmarc.com>
#
# SPDX-License-Identifier: BUSL-1.1

[package]
name = "mm-server"
version = "0.5.2"
edition = "2021"

[[bin]]
name = "mmserver"
path = "src/main.rs"

[dependencies]
anyhow = "1"
audiopus_sys = { version = "0.2", features = ["static"] }
boring = "3"
byteorder = "1"
bytes = "1"
clap = { version = "4", features = ["derive"] }
clone3 = "0.2"
converge = "0.0.5"
crossbeam-channel = "0.5"
cstr = "0.2"
ctrlc = "3"
cursor-icon = "1"
dasp = "0.11"
drm-fourcc = "2"
ffmpeg-next = { version = "7", optional = true }
ffmpeg-sys-next = { version = "7", optional = true }
git-version = "0.3"
glam = "0.24"
hashbrown = "0.14"
image = { version = "0.25", default-features = false, features = ["png"] }
ip_rfc = "0.1"
lazy_static = "1.4"
libc = "0.2"
libloading = "0.8"
listenfd = "1"
mio = { version = "1", features = ["net", "os-ext", "os-poll"] }
mio-timerfd = "0.2"
mktemp = "0.5"
mm-protocol = { path = "../mm-protocol" }
nix = { version = "0.29", features = ["net", "socket", "uio"] }
num_enum = "0.7"
octets = "0.2"
oneshot = { version = "0.1", default-features = false, features = ["std"] }
opus = "0.3"
paste = "1"
parking_lot = "0.12"
pathsearch = "0.2"
protobuf = "3.2"
quiche = { version = "0.18", features = ["boringssl-boring-crate"] }
rand = "0.8"
rcgen = "0.12"
regex = "1"
ring = "0.16"
scopeguard = "1.2"
serde = "1"
serde_json = "1"
simple_moving_average = { version = "1", optional = true }
slotmap = "1"
thiserror = "1"
threadpool = "1"
tiny_id = "0.1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-tracy = { version = "0.11", default-features = false }
tracy-client = { version = "0.17", default-features = false }
uds = "0.4"
uuid = "1"
wayland-protocols = { version = "0.32", features = ["server", "staging", "unstable"] }
wayland-scanner = "0.31"
wayland-server = { version = "0.31", features = ["log"] }
x11rb = { version = "0.13", features = ["composite"] }

[dependencies.ash]
git = "https://github.com/ash-rs/ash"
rev = "92084df65f52aa15b704279fb6d8d26a3ee71809"

[dependencies.fuser]
git = "https://github.com/colinmarc/fuser"
rev = "643facdc1bcc9a3b11d7a88ebfaaaa045c3596c1"
default-features = false

[dependencies.pulseaudio]
git = "https://github.com/colinmarc/pulseaudio-rs"
rev = "70ddb748f20ceecc20e963e571188124aeb30186"

[dependencies.rustix]
version = "0.38"
default-features = false
features = ["mm", "mount", "pipe", "time", "thread", "stdio"]

[dependencies.southpaw]
git = "https://github.com/colinmarc/southpaw"
rev = "e022f2066b300c9600d69bac73e7d8ef7e19f08c"

[dependencies.svt]
git = "https://github.com/colinmarc/svt-rs"
rev = "747915fa4b2f7d0bd2c70ef5af108c75031efc53"
optional = true
features = ["av1", "hevc"]

[build-dependencies]
system-deps = "6"
xkbcommon = { version = "0.7", default-features = false }

[build-dependencies.slang]
git = "https://github.com/colinmarc/slang-rs"
rev = "78f7be2eb9a694747c6878d476984f576e21edf4"
# Uses SLANG_DIR if set, otherwise builds slang from source
features = ["from-source"]

[package.metadata.system-deps]
libavcodec = { version = "6", feature = "ffmpeg_encode" }

[features]
default = ["svt_encode", "vulkan_encode"]
svt_encode = ["dep:svt"]
vulkan_encode = []
ffmpeg_encode = ["dep:ffmpeg-next", "dep:ffmpeg-sys-next"]
tracy = [
    "dep:simple_moving_average",
    "tracy-client/enable",
    "tracy-client/broadcast",
    "tracing-tracy/enable",
]

[dev-dependencies]
pretty_assertions = "*"
test-log = { version = "*", features = ["trace"] }

[patch.crates-io]
mio-timerfd = { git = "https://github.com/colinmarc/mio-timerfd.git" }
