# Copyright 2024 Colin Marc <hi@colinmarc.com>
#
# SPDX-License-Identifier: MIT

[package]
name = "latency-test"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "latency-test"
path = "bin/latency.rs"

[[bin]]
name = "color-test"
path = "bin/color.rs"

[[bin]]
name = "cursorlock-test"
path = "bin/cursorlock.rs"

[dependencies]
anyhow = "1.0.75"
ash = "0.37.3"
ash-window = "0.12.0"
raw-window-handle = "0.5.2"
clap = { version = "4.4.5", features = ["derive"] }
glam = "0.27.0"
imgui-rs-vulkan-renderer = { version = "1.12", features = [
    "dynamic-rendering",
] }
imgui = { version = "0.11", features = ["tables-api"] }
imgui-winit-support = "0.11"


[dependencies.winit]
version = "0.29"
default-features = false
features = ["wayland", "rwh_05"]

[dependencies.bevy]
version = "0.14"
default-features = false
features = [
    #"animation",
    #"bevy_asset",
    #"bevy_audio",
    #"bevy_gilrs",
    #"bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    #"bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    #"bevy_text",
    #"bevy_ui",
    #"png",
    #"hdr",
    #"vorbis",
    #"x11",
    "wayland",
    #"bevy_gizmos",
    #"android_shared_stdcxx",
    "tonemapping_luts",
    #"default_font",
    #"webgl2",
    #"bevy_debug_stepping",
]

[build-dependencies.slang]
git = "https://github.com/colinmarc/slang-rs"
rev = "78f7be2eb9a694747c6878d476984f576e21edf4"
# Uses SLANG_DIR if set, otherwise builds slang from source
features = ["from-source"]

[patch.crates-io]
imgui = { git = "https://github.com/colinmarc/imgui-rs" }
imgui-winit-support = { git = "https://github.com/colinmarc/imgui-rs" }
